# ALMONDO-Model

./: .gitignore  AlmondoModel.toml  IKEA_tweets.json  README.md  Vestas_tweets.json  aggregate_files.py  bipartite_join_tables.py  bipartite_network.ipynb  cred.yaml  credenziali_twitter.txt  df_for_topic_modelling.csv  downloadData.py  english_tweets.txt  main.py  meeting_participants_lobbyists.csv  miscellaneous.ipynb  preliminary_analysis.ipynb  pyproject.toml  requirements.txt  test_limits.py  tests.ipynb  text_translation.ipynb  topic_modelling.ipynb  usertimeline.py  utils.py
almondo_model/classes/: metrics.py
bipartite-network/: bipartite_network.ipynb  locationtagger.py
code not working/: deleted_code.py  downloadData.py  questo_codice_funziona_ma_ne_fa_100_per_volta.py  test.json  tests.py  tests_2.ipynb
data/: users_data.json
data/in/: edge_list.csv  sources.csv  usernames.txt  users_to_do.txt  weights_matrix.csv
data/log/: dates.json  users_done.txt
model/: __init__.py  aggregate_metrics.ipynb  aggregate_metrics.py  aggregate_plots.ipynb  almondoModel.py  analysis.py  config.json  executor.py  executor2.py  executor_balanced_B_m.py  executor_sensitivity_B.py  executor_sensitivity_T_strategy.py  executor_sensitivity_custom_prior_w.py  executor_unbalanced_B.py  executor_unbalanced_m.py  lobbyistAgent.py  model.ipynb  model_test_wrapper.py  model_tests.ipynb  modelexe.py  plots.py  plottingutils.py  simulation_utils.py  simulations.ipynb  simulations.py  simulations2.py
model/classes/: __init__.py  almondoModel.py  metrics.py  simulator.py
model/functions/: __init__.py  metrics.py  strategies.py  utils.py
model/metrics/: aggregate_metrics.ipynb  aggregate_metrics.py.py
model/results/: 1_lobbyistsconfig.json  2_lobbyistsconfig.json  3_lobbyistsconfig.json  config.json
text-analysis/: 1_preliminary_analysis.ipynb  2_text_translation.ipynb  3_text_cleaning.ipynb  5_wordclouds.py  6_topic_modelling.ipynb  7_metrics_analysis copy.ipynb  7_metrics_analysis.ipynb  A_aggregate_files.py  B_prepare_dataframe.py  C_translate.py  D_text_cleaning.py  aggregate_files.py  clean_dataframe.py  preliminary_analysis.ipynb  text_cleaning.ipynb  text_translation.ipynb  topic_modelling.ipynb  translate.py  translated.csv
tweet-retrieval/: check.py  check_tweets_left.py  checkdates.py  downloadData.py  main.py  main_user.py  utils.py
(+21293 files in other folders)
