[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "almondo-model"
version = "0.1.0"
description = "AlmondoModel is a diffusion model designed to simulate the diffusion of influence across a network with the influence of lobbyists having different strategies. It extends the DiffusionModel class from the ndlib library, enabling the simulation of opinion evolution and the effects of lobbying activities over time. The model can be customized with various parameters such as probabilities for optimistic and pessimistic events, node influence factors, and more."
authors = [{name = "Alina Sirbu", email = "alina.sirbu@unibo.it"},{name = "Gulio Rossetti", email = "giulio.rossetti@isti.cnr.it"}, {name = "Valentina Pansanella", email = "valentina.pansanella@isti.cnr.it"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Add any dependencies your classes need
    "bokeh==3.6.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "docopt==0.6.2",
    "dynetx==0.3.2",
    "fonttools==4.56.0",
    "future==1.0.0",
    "idna==3.10",
    "igraph==0.11.8",
    "Jinja2==3.1.5",
    "kiwisolver==1.4.8",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.0",
    "ndlib==5.1.1",
    "netdispatch==0.1.0",
    "networkx==3.4.2",
    "numpy==2.2.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pipreqs==0.4.13",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-igraph==0.11.8",
    "pytz==2025.1",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "six==1.17.0",
    "texttable==1.7.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "xyzservices==2025.1.0",
    "yarg==0.1.10"
]

[project.urls]
Homepage = "https://almondo-project.github.io/"
Repository = "https://github.com/ALMONDO-Project/ALMONDO-Model"

[tool.setuptools.packages.find]
# This tells setuptools to look for packages under the 'src' directory
# and include 'my_awesome_package' (and its subpackages like 'my_awesome_package.utils')
find = {where = ["src/almondo-model"]}
# where = ["model"]
include = ["model*"]